--- a/index.html
+++ b/index.html
@@ -435,90 +435,27 @@
                     </div>
                 </div>
                 <div id="block--hintmag" class="js-block block project project--hintmag" data-block-id="hintmag">
-                    <div class="project-content">
-                        <div class="js-slide"><h2 class="project-title">Hint Magazine: Gaslight</h2>
-                            <p class="project-description">Art direction and design for the annual online interactive
-                                fashion magazine ‘Hint Magazine’. Released during Paris Fashion Week.</p>
-                            <div class="project-details">
-                                <div class="project-details__item"><p class="milli"><span
-                                        class="project-details__item__label">MADE AT</span> <span
-                                        class="project-details__item__value"> <a href="http://www.bleed.no/"
-                                                                                 class="project-details__link"
-                                                                                 target="_blank"> <span>BLEED</span>
-                                </a> </span></p></div>
-                                <div class="project-details__item"><p class="milli"><span
-                                        class="project-details__item__label">Development and sound</span> <span
-                                        class="project-details__item__value"> Bjørn Gunnar Staal </span></p></div>
-                            </div>
-                        </div>
-                        <div class="row row--extra-bm">
-                            <figure class="js-slide"><img
-                                    data-src="//cdn.sanscolour.com/images/projects/hintmag/01-small.jpg"
-                                    alt="Hint Magazine: Gaslight — Logotype. Design by Sans Colour."
-                                    class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                    data-width="1800" data-height="555"
-                                    src="./01-large(4).jpg"
-                                    style="display: inline;"></figure>
-                        </div>
-                        <div class="row row--multi-col js-slide">
-                            <div class="col col--1-3">
-                                <figure><img src="./02-large(5).jpg"
-                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/02-small.jpg"
-                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
-                                             class="fs-img project__img hintmag__img hintmag__img--one fs-standard-resolution fs-src-find-replace"
-                                             data-width="580" data-height="738" style="display: inline;"></figure>
-                            </div>
-                            <div class="col col--1-3">
-                                <figure><img src="./03-large(5).jpg"
-                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/03-small.jpg"
-                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
-                                             class="fs-img project__img hintmag__img hintmag__img--two fs-standard-resolution fs-src-find-replace"
-                                             data-width="580" data-height="738" style="display: inline;"></figure>
-                                <figure><img src="./04-large(5).jpg"
-                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/04-small.jpg"
-                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
-                                             class="fs-img project__img hintmag__img hintmag__img--three fs-standard-resolution fs-src-find-replace"
-                                             data-width="580" data-height="738" style="display: inline;"></figure>
-                            </div>
-                            <div class="col col--1-3">
-                                <figure><img src="./05-large(5).jpg"
-                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/05-small.jpg"
-                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
-                                             class="fs-img project__img hintmag__img hintmag__img--four fs-standard-resolution fs-src-find-replace"
-                                             data-width="580" data-height="738" style="display: inline;"></figure>
-                            </div>
-                        </div>
-                        <div class="row row--multi-col js-slide">
-                            <div class="col col--1-3">
-                                <figure><img src="./06-large(4).jpg"
-                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/06-small.jpg"
-                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
-                                             class="fs-img project__img hintmag__img fs-standard-resolution fs-src-find-replace"
-                                             data-width="580" data-height="738" style="display: inline;"></figure>
-                            </div>
-                            <div class="col col--1-3">
-                                <figure><img src="./07-large(4).jpg"
-                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/07-small.jpg"
-                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
-                                             class="fs-img project__img hintmag__img fs-standard-resolution fs-src-find-replace"
-                                             data-width="580" data-height="738" style="display: inline;"></figure>
-                            </div>
-                            <div class="col col--1-3">
-                                <figure><img src="./08-large(2).jpg"
-                                             data-src="//cdn.sanscolour.com/images/projects/hintmag/08-small.jpg"
-                                             alt="Gaslight — Art direction and design. Design by Sans Colour."
-                                             class="fs-img project__img hintmag__img fs-standard-resolution fs-src-find-replace"
-                                             data-width="580" data-height="738" style="display: inline;"></figure>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <figure class="js-slide"><img
-                                    src="./09-large(1).jpg"
-                                    data-src="//cdn.sanscolour.com/images/projects/hintmag/09-small.jpg"
-                                    alt="Hint Magazine: Gaslight — Gaslight Universe. Design by Sans Colour."
-                                    class="fs-img project__img fs-standard-resolution fs-src-find-replace"
-                                    data-width="1800" data-height="1130" style="display: inline;"></figure>
-                        </div>
+                    <div class="project-content" style="background-color:#ffffff">
+                        <!--<div class="js-slide" style="overflow: hidden;position: relative">-->
+                            <!--<h1 class="project-firsttitle" style="text-align: left;padding-left:300px;width:500px">Hand painting</h1>-->
+                            <!--<h2 class="project-title" style="text-align: left;padding-left: 283px;width:500px">绘图作品</h2>-->
+                            <!--<img src="images/hand1.png" alt="" style="position: absolute;top:80px;left:500px;width:300px">-->
+                        <!--</div>-->
+                        <img src="images/hand1.png" alt="">
+                        <img src="images/hand2.png" alt="">
+                        <img src="images/hand3.png" alt="">
+                        <img src="images/hand4.png" alt="">
+                        <img src="images/hand5.png" alt="">
+                        <img src="images/hand6.png" alt="">
+                        <img src="images/hand7.png" alt="">
+                        <img src="images/hand8.png" alt="">
+                        <img src="images/hand9.png" alt="">
+                        <img src="images/hand10.png" alt="">
+                        <img src="images/hand11.png" alt="">
+                        <img src="images/hand12.png" alt="">
+                        <img src="images/hand13.png" alt="">
+                        <img src="images/hand14.png" alt="">
+
                     </div>
                 </div>
                 <div id="block--other" class="js-block block project project--other" data-block-id="other">
