--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             var left = $('.frame--left');
             var returnTop = $('#returnTop');
             var top = $('body').scrollTop();
-            console.log(top);
+//            console.log(top);
             if(top>500){
                 nav.css('display','block');
                 left.css('display','block');
