--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 <div id="returnTop">
     <img src="images/top.png" alt="">
 </div>
-<!--<script src="./script-abd2a7c7.js"></script>-->
+<script src="./script-abd2a7c7.js"></script>
 <!--<script>-->
     <!--(function (i, s, o, g, r, a, m) {-->
         <!--i['GoogleAnalyticsObject'] = r;-->
