--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <div class="home-content">
         <div class="container">
             <div class="topContent">
-                <img src="images/usericon.png" alt="" class="userIcon">
+                <a href="#block--me"><img src="images/usericon.png" alt="" class="userIcon"></a>
                 <img src="images/logo.png" alt="" class="logotext">
                 <img src="images/bg_obj1.png" alt="" class="rightPic">
             </div>
