--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                         <img src="images/hand14.png" alt="">
                     </div>
                 </div>
-                <div id="block--other" class="js-block block project project--other" data-block-id="other">
+                <div id="block--other" class="js-block block project project--other" data-block-id="other" style="margin-top:-270px">
                     <div class="project-content" style="background-color:#ffffff">
                         <img src="images/wuliao1.png" alt="">
                         <img src="images/wuliao2.png" alt="">
