--- a/index.html
+++ b/index.html
@@ -188,21 +188,26 @@
                         <span class="project-list__item__title">页首</span>
                     </li>
                     <li id="project-list__item--akerBrygge" class="project-list__item" data-block-id="akerBrygge">
+                        <span class="icons web">web</span>
                         <span class="project-list__item__title">理疗会所管理SASSp平台</span>
+                    </li>
+                    <li id="project-list__item--aspiro" class="project-list__item" data-block-id="aspiro">
+                        <span class="icons web">web</span>
+                        <span class="project-list__item__title">诊所管理SASS平台</span>
                     </li>
                     <li id="project-list__item--akerBryggeDisplay" class="project-list__item"
                         data-block-id="akerBryggeDisplay">
+                        <span class="icons app">APP</span>
                         <span class="project-list__item__title">保险APP</span>
                     </li>
                     <li id="project-list__item--norwegian-ambassador" class="project-list__item"
                         data-block-id="norwegian-ambassador">
+                        <span class="icons app">APP</span>
                         <span class="project-list__item__title">汽车维修APP</span>
                     </li>
                     <li id="project-list__item--alu-mind" class="project-list__item" data-block-id="alu-mind">
+                        <span class="icons app">APP</span>
                         <span class="project-list__item__title">农贸商城</span>
-                    </li>
-                    <li id="project-list__item--aspiro" class="project-list__item" data-block-id="aspiro">
-                        <span class="project-list__item__title">诊所管理SASS平台</span>
                     </li>
                     <li id="project-list__item--hintmag" class="project-list__item" data-block-id="hintmag">
                         <span class="project-list__item__title">绘图</span>
@@ -306,6 +311,7 @@
     <div class="main-content">
         <div class="projects">
             <div class="projects-content">
+                <!--健康理疗-->
                 <div id="block--akerBrygge" class="js-block block project project--akerBrygge"
                      data-block-id="akerBrygge">
                     <div class="project-content" style="background-color:#ffffff">
@@ -336,6 +342,34 @@
                         <img src="images/ninth5.png" alt="">
                     </div>
                 </div>
+                <!--诊所管理-->
+                <div id="block--aspiro" class="js-block block project project--aspiro" data-block-id="aspiro">
+                    <div class="project-content" style="background-color:#ffffff">
+                        <div class="js-slide" style="overflow: hidden">
+                            <h1 class="project-firsttitle">Clinic management software</h1>
+                            <h2 class="project-title">诊所管理SAAS平台</h2>
+                            <p class="project-description">领先的互联网基层医疗诊所管理软件，为全国基层医疗机构提供最具价值的医疗信息服务 。专注于医疗软件的研发推动医疗保健、卫生管理为己任， 提供一站式信息化诊疗服务。适合个体诊所、乡村卫生室、连锁诊所、卫生服务站等基层医务人员工作模式和特点的经营管理系统。</p>
+                        </div>
+                        <img src="images/manage1.png" alt="">
+                        <img src="images/manage2.png" alt="">
+                        <img src="images/manage3.png" alt="">
+                        <img src="images/manage4.png" alt="">
+                        <img src="images/manage5.png" alt="">
+                        <img src="images/manage6.png" alt="">
+                        <img src="images/manage8.png" alt="">
+                        <img src="images/manage9.png" alt="">
+                        <img src="images/manage10.png" alt="">
+                        <img src="images/manage11.png" alt="">
+                        <img src="images/manage12.png" alt="">
+                        <img src="images/manage13.png" alt="">
+                        <img src="images/manage14.png" alt="">
+                        <img src="images/manage15.png" alt="">
+                        <img src="images/manage16.png" alt="">
+                        <img src="images/manage17.png" alt="">
+
+
+                    </div>
+                </div>
                 <div id="block--akerBryggeDisplay" class="js-block block project project--akerBryggeDisplay"
                      data-block-id="akerBryggeDisplay">
                     <div class="project-content" style="background-color:#ffffff">
@@ -353,6 +387,7 @@
                         <img src="images/bao7.png" alt="">
                     </div>
                 </div>
+                <!--修车宝-->
                 <div id="block--norwegian-ambassador" class="js-block block project project--norwegian-ambassador"
                      data-block-id="norwegian-ambassador">
                     <div class="project-content" style="background-color:#ffffff">
@@ -374,6 +409,7 @@
 
                     </div>
                 </div>
+                <!--商城-->
                 <div id="block--alu-mind" class="js-block block project project--alu-mind" data-block-id="alu-mind">
                     <div class="project-content" style="background-color:#ffffff">
                         <div class="js-slide" style="overflow: hidden">
@@ -411,33 +447,6 @@
 
                     </div>
                 </div>
-                <div id="block--aspiro" class="js-block block project project--aspiro" data-block-id="aspiro">
-                    <div class="project-content" style="background-color:#ffffff">
-                        <div class="js-slide" style="overflow: hidden">
-                            <h1 class="project-firsttitle">Clinic management software</h1>
-                            <h2 class="project-title">诊所管理SAAS平台</h2>
-                            <p class="project-description">领先的互联网基层医疗诊所管理软件，为全国基层医疗机构提供最具价值的医疗信息服务 。专注于医疗软件的研发推动医疗保健、卫生管理为己任， 提供一站式信息化诊疗服务。适合个体诊所、乡村卫生室、连锁诊所、卫生服务站等基层医务人员工作模式和特点的经营管理系统。</p>
-                        </div>
-                        <img src="images/manage1.png" alt="">
-                        <img src="images/manage2.png" alt="">
-                        <img src="images/manage3.png" alt="">
-                        <img src="images/manage4.png" alt="">
-                        <img src="images/manage5.png" alt="">
-                        <img src="images/manage6.png" alt="">
-                        <img src="images/manage8.png" alt="">
-                        <img src="images/manage9.png" alt="">
-                        <img src="images/manage10.png" alt="">
-                        <img src="images/manage11.png" alt="">
-                        <img src="images/manage12.png" alt="">
-                        <img src="images/manage13.png" alt="">
-                        <img src="images/manage14.png" alt="">
-                        <img src="images/manage15.png" alt="">
-                        <img src="images/manage16.png" alt="">
-                        <img src="images/manage17.png" alt="">
-
-
-                    </div>
-                </div>
                 <div id="block--hintmag" class="js-block block project project--hintmag" data-block-id="hintmag">
                     <div class="project-content" style="background-color:#ffffff">
                         <img src="images/hand1.png" alt="">
@@ -456,7 +465,7 @@
                         <img src="images/hand14.png" alt="">
                     </div>
                 </div>
-                <div id="block--other" class="js-block block project project--other" data-block-id="other" style="margin-top:-270px">
+                <div id="block--other" class="js-block block project project--other" data-block-id="other" style="margin-top: -270px">
                     <div class="project-content" style="background-color:#ffffff">
                         <img src="images/wuliao1.png" alt="">
                         <img src="images/wuliao2.png" alt="">
