--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 </nav>
 <div class="js-block-parallax block-placeholder home-placeholder js-slide" data-block-id="home"></div>
 <div id="block--home" class="js-block block--first home" data-block-id="home"
-     style="transform: translate3d(0px, 0px, 0px);">
+     style="transform: translate3d(0px, 0px, 0px);overflow:hidden;">
     <div class="home-content">
         <div class="container">
             <div class="topContent">
@@ -240,7 +240,6 @@
                 <img src="images/bg_obj1.png" alt="" class="rightPic">
             </div>
             <div class="container__centered container__centered--home slider style2 slider7">
-                <!--<div class="">-->
                     <div class="container">
                         <ul class="content">
                             <li class="lunboContent">
@@ -270,38 +269,7 @@
                 <div class="slogans">
                     <img src="images/bg_obj3.png" alt="" class="bg_obj3">
                 </div>
-                <!--</div>-->
-                <!--<div class="logo" itemscope="" itemtype="http://schema.org/Organization"><a class="logo__link"-->
-                                                                                            <!--href="http://sanscolour.com/"-->
-                                                                                            <!--itemprop="url"> <img-->
-                        <!--class="logo__img" src="./sanscolour-logo.png"-->
-                        <!--itemprop="logo" alt="Joakim Jansson"> </a></div>-->
-                <!--<h1 class="home-headline"><span class="tablet-break">SANS COLOUR IS AN INDEPENDENT DESIGN STUDIO<br-->
-                        <!--class="mobile-break"> IN NEW YORK, USA</span> <span class="tablet-break">FOUNDED S/S 2014 BY SWEDISH <br-->
-                        <!--class="mobile-break">GRAPHIC DESIGNER JOAKIM JANSSON</span></h1>-->
-                <!--<div class="alpha home-contact-details"><span class="email"> <a class=""-->
-                                                                                <!--href="mailto:joakim@sanscolour.com">joakim@sanscolour.com</a> </span>-->
-                    <!--<span class="home-contact-details__divider"> ∞ </span> <span class="phone"> <a class=""-->
-                                                                                                   <!--href="tel:0019179437656">(+1)-->
-                        <!--917 943 7656</a> </span></div>-->
-                <!--<div class="home-social">-->
-                    <!--<ul class="list list&#45;&#45;h home-social-list">-->
-                        <!--<li class="home-social-list__item"><a href="http://blog.sanscolour.com/" target="_blank"-->
-                                                              <!--rel="external">BLOG</a></li>-->
-                        <!--<li class="home-social-list__item"><a href="https://www.facebook.com/sanscolour" target="_blank"-->
-                                                              <!--rel="external">FACEBOOK</a></li>-->
-                        <!--<li class="home-social-list__item"><a href="http://www.behance.net/joakimjansson"-->
-                                                              <!--target="_blank" rel="external">BEHANCE</a></li>-->
-                        <!--<li class="home-social-list__item"><a href="https://www.twitter.com/joakimjansson"-->
-                                                              <!--target="_blank" rel="external">TWITTER</a></li>-->
-                        <!--<li class="home-social-list__item"><a href="http://pinterest.com/joakimjansson/" target="_blank"-->
-                                                              <!--rel="external">PINTEREST</a></li>-->
-                        <!--<li class="home-social-list__item"><a href="http://www.instagram.com/joakimjansson"-->
-                                                              <!--target="_blank" rel="external">INSTAGRAM</a></li>-->
-                        <!--<li class="home-social-list__item"><a href="http://open.spotify.com/user/sanscolour"-->
-                                                              <!--target="_blank" rel="external">SPOTIFY</a></li>-->
-                    <!--</ul>-->
-                <!--</div>-->
+     
             </div>
         </div>
         <div class="scroll-indicator"></div>
