--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     </li>
                     <li id="project-list__item--akerBrygge" class="project-list__item" data-block-id="akerBrygge">
                         <span class="icons web">web</span>
-                        <span class="project-list__item__title">理疗会所管理SASSp平台</span>
+                        <span class="project-list__item__title">理疗会所管理SASS平台</span>
                     </li>
                     <li id="project-list__item--aspiro" class="project-list__item" data-block-id="aspiro">
                         <span class="icons web">web</span>
@@ -284,13 +284,13 @@
                      data-block-id="akerBrygge">
                     <div class="project-content" style="background-color:#ffffff">
                         <div class="js-slide" style="overflow: hidden">
-                            <h1 class="project-firsttitle">Kang master</h1>
+                            <h1 class="project-firsttitle">Master</h1>
                             <h2 class="project-title">健康理疗云平台管理系统</h2>
-                            <p class="project-description">康总管足浴理疗运营管理云平台系统是一套智能化专业级足浴理疗按摩类SAAS管理系统，专业的智能化足浴理疗运营SAAS管理云平台。系统根据足浴、中医、理疗、按摩、SPA等业务流程和运营管理而高度抽离出来的健康产业运营系统，系统的设计继承了最先进的互联网产品设计理念，并依赖业务中产生互联网大数据并进行数据挖掘，来达到优化业务流程管理，提供管理决策辅助手段，提升运营管理效率的目的。</p>
+                            <p class="project-description">理疗会所管理SASS平台系统是一套智能化专业级足浴理疗按摩类SAAS管理系统，专业的智能化足浴理疗运营SAAS管理云平台。系统根据足浴、中医、理疗、按摩、SPA等业务流程和运营管理而高度抽离出来的健康产业运营系统，系统的设计继承了最先进的互联网产品设计理念，并依赖业务中产生互联网大数据并进行数据挖掘，来达到优化业务流程管理，提供管理决策辅助手段，提升运营管理效率的目的。</p>
                         </div>
                         <img src="images/kangfirst.png" alt="">
                         <img src="images/kangsecond.png" alt="">
-                        <img src="images/kangthird.png" alt="">
+                        <!-- <img src="images/kangthird.png" alt="">
                         <img src="images/kangfour1.png" alt="">
                         <img src="images/kangfour2.png" alt="">
                         <img src="images/kangfith.png" alt="">
@@ -307,7 +307,7 @@
                         <img src="images/ninth1.png" alt="">
                         <img src="images/ninth3.png" alt="">
                         <img src="images/ninth4.png" alt="">
-                        <img src="images/ninth5.png" alt="">
+                        <img src="images/ninth5.png" alt=""> -->
                     </div>
                 </div>
                 <!--诊所管理-->
