--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <meta name="twitter:description"
           content="Sans Colour is the moniker and freelance umbrella for the swedish graphic + interactive designer Joakim Jansson. Hyper Island alumnus with +10 years work experience. Currently working as an Art-Director at VSCO in New York.">
     <meta name="twitter:image:src" content="http://cdn.sanscolour.com/images/meta/SansColour_TwitterCard.gif">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="cleartype" content="on">
     <link rel="shortcut icon" href="images/usericon.png">
     <style>
@@ -77,6 +78,7 @@
                 border-bottom: 4px solid green;
             }
         }
+      
         .style2{
             width:1426px;
         }
@@ -290,7 +292,7 @@
                         </div>
                         <img src="images/kangfirst.png" alt="">
                         <img src="images/kangsecond.png" alt="">
-                        <!-- <img src="images/kangthird.png" alt="">
+                        <img src="images/kangthird.png" alt="">
                         <img src="images/kangfour1.png" alt="">
                         <img src="images/kangfour2.png" alt="">
                         <img src="images/kangfith.png" alt="">
@@ -307,7 +309,7 @@
                         <img src="images/ninth1.png" alt="">
                         <img src="images/ninth3.png" alt="">
                         <img src="images/ninth4.png" alt="">
-                        <img src="images/ninth5.png" alt=""> -->
+                        <img src="images/ninth5.png" alt="">
                     </div>
                 </div>
                 <!--诊所管理-->
