--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 border-bottom: 4px solid green;
             }
         }
-      
+
         .style2{
             width:1426px;
         }
@@ -271,7 +271,7 @@
                 <div class="slogans">
                     <img src="images/bg_obj3.png" alt="" class="bg_obj3">
                 </div>
-     
+
             </div>
         </div>
         <div class="scroll-indicator"></div>
@@ -447,7 +447,7 @@
                 </div>
                 <div id="block--me" class="js-block block project project--me" data-block-id="me">
                     <div class="project-content" style="background-color:#ffffff">
-                        <img src="images/me.png" alt="">
+                        <img src="images/me.jpeg" alt="">
                         <img src="images/meContent.png" alt="" style="margin-top:-50px">
                     </div>
                 </div>
